상품을 별점 및 등록순으로 정렬하여 페이지네이션 적용